--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask = "*"
+azure-functions = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
-python_full_version = "3.10.6"
+python_version = "3.9"
